# obs-rive

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
data/locale/: en-US.ini
scripts/: build_rive.bat  build_rive.sh
src/: IBackend.h  backend_d3d11.cpp  backend_gl.cpp  backend_metal.mm  clang_cl_obs_compat.h  plugin-main.cpp  rive-core.cpp  rive-core.h  rive-source.cpp
